--- a/frontend/src/style/custom.css
+++ b/frontend/src/style/custom.css
@@ -2,3 +2,17 @@ body {
 	background: #ffffff;
 	margin: 0px;
 }
+
+.container {
+	margin: 0; 
+	min-height:100px;
+}
+
+#table-container {
+	max-height: 100px;
+	padding: 10px;
+}
+
+#table-container .-pagination {
+	height: 35px;
+}
